2005-09-15  Stipe Tolj  <stolj@wapme-group.de>
   * gw/smsc/smsc_at.[ch]: applied RAW TCP patch to support remote termnial 
     server connections for devices. Also some inlined source code beauty.
   * doc/userguide/userguide.xml: added variables for the RAW TCP mode.
     Thanks to Stanislav Sinyagin <ssinyagin@yahoo.com> for the patch.
     [Msg-Id: <20050914152140.76555.qmail@web51904.mail.yahoo.com>]
     
2005-09-15  Stipe Tolj  <stolj@wapme-group.de>
   * gw/smsc/smsc_at.c: fixing compiler warning. No logic change.
   
2005-09-14  Stipe Tolj  <stolj@wapme-group.de>
   * gw/smsc/smsc_at.c: fixing a bug for 'nokiaphone' GSM modem types, where
     PDUs longer then 18 bytes get truncated by the device if passed too fast.
     We pass the PDU now in 18 byte chunks and delay to smoothly allow the
     device to parse this. This is know for the Nokia phone GSM types.
     Thanks to Ulrich Petri <upml@upcd.de> for the fix and patch.
     [Msg-Id: <4326E76A.3040902@upcd.de>]

2005-09-14  Stipe Tolj  <stolj@wapme-group.de>
   * gw/smsc/smsc_at.c: minor change in at_wait_modem_command to display the 
     sscanf() parsed error code string lateral only if we really found a int
     in the string returned from the device. No logic change. 
     Thanks to Alex Judd <kannel@skywire.co.uk> for this hint.
     [Msg-Id: <4326F4EB.5070302@skywire.co.uk>]
     
2005-09-08  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wml_compiler.c: source styling, no logic change.
   * configure[.in]: changed required version of libxml2 to 2.6.0 due to
     applied Paul's patch to gw/wml_compiler.c. Solves compiler warnings
     and errors. Fixing build bug reported by Jarrod Hermer <jarrod@mybeat.net>.
     [Msg-Id: <20050908093728.B109C5A44@ctb-mesg1.saix.net>]
    
2005-09-02  Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smpp_pdu.c: fixed length for the NULterminated TLV.

2005-09-01  Alexander Malysh <amalysh at kannel.org>
   * gw/wap-appl.c: fixed compiler warning.