@@ -96,7 +96,7 @@ charset_t character_sets[] = {
 
 /*
  * set_charset - if xml doesn't have an <?xml..encoding=something>, 
- * converts body from argument charset to utf-8
+ * converts body from argument charset to UTF-8
  */
 
 void set_charset(Octstr *document, Octstr *charset)
